--- a/react-frontend/index.html
+++ b/react-frontend/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/building_icon.svg"
+      href="/building_icon.png"
       class="favicon" />
     <meta
       name="viewport"
